--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- <script defer src="./wwwroot/js/bootstrap.bundle.min.js"></script> -->
     <script src="https://kit.fontawesome.com/80fd7dc215.js" crossorigin="anonymous"></script>
     <script defer src="./wwwroot/js/welcome-clock.js"></script>
+    <script defer src="./wwwroot/js/calendar-change-months.js"></script>
     <script defer src="./wwwroot/js/Calendar.js"></script>
 </head>
 
@@ -122,11 +123,11 @@
             <div class="row margin-right-0">
                 <div class="col-12 padding-0">
                     <div class="d-flex justify-content-between align-items-center bg-primary fs-5 p-2 text-white">
-                        <button class="btn btn-primary fs-3">
-                            <i class="fas fa-angle-left"></i>
+                        <button id="month-back" class="btn btn-primary">
+                            <i class="fas fa-angle-left fs-3"></i>
                         </button>
-                        <span>MÅNAD</span>
-                        <button class="btn btn-primary">
+                        <span id="current-month" class="text-capitalize">MÅNAD - ÅR</span>
+                        <button id="month-forward" class="btn btn-primary">
                             <i class="fas fa-angle-right fs-3"></i>
                         </button>
                     </div>
