--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                 p-2
                 text-white
               ">
-                        <button class="btn btn-primary fs-3">
-                            <i class="fas fa-angle-left"></i>
+                        <button id="month-back" class="btn btn-primary">
+                            <i class="fas fa-angle-left fs-3"></i>
                         </button>
                         <span id="current-month" class="text-capitalize">MÅNAD - ÅR</span>
                         <button id="month-forward" class="btn btn-primary">
