--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                     <label for="stopDate" class="form-label">Slutdatum</label>
                                     <input type="date" class="form-control" id="stopDate" />
                                 </div>
-                                <button type="submit" class="btn btn-primary">Save</button>
+                                <button type="submit" class="btn btn-primary" >Submit</button>
                             </form>
                         </div>
                         <div class="modal-footer">
