--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
                                     <label for="stopDate" class="form-label">Slutdatum</label>
                                     <input type="date" class="form-control" id="stopDate" />
                                 </div>
-                                <button type="submit" class="btn btn-primary" >Submit</button>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
-                                Close
-                            </button>
-                        </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+                                    Close
+                                  </button>
+                                  <button type="submit" id="my_button" class="btn btn-primary" >Submit</button>
+                                </div>
+                            </form>                        
+                        </div>                        
                     </div>
                 </div>
             </div>
