--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
-    <!-- <link rel="stylesheet" href="./wwwroot/css/bootstrap.min.css"> -->
+
     <link rel="stylesheet" href="./wwwroot/css/base.css" />
 
-    <script defer src="wwwroot/js/main.js"></script>
-    <script defer src="wwwroot/js/welcome-clock.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"></script>
-    <!-- <script defer src="./wwwroot/js/bootstrap.bundle.min.js"></script> -->
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
+
     <script src="https://kit.fontawesome.com/80fd7dc215.js" crossorigin="anonymous"></script>
+
+    <script defer src="./wwwroot/js/main.js"></script>
     <script defer src="./wwwroot/js/welcome-clock.js"></script>
     <script defer src="./wwwroot/js/calendar-change-months.js"></script>
-    <script defer src="./wwwroot/js/Calendar.js"></script>
     <script defer src="./wwwroot/js/todo.js"></script>
+    <script defer src="./wwwroot/js/Calendar.js"></script>
 </head>
 
 <body>
@@ -31,12 +31,13 @@
     </header>
     <div class="row bg-secondary text-white margin-right-0">
         <div class="col-12 col-sm-3 col-md-2 padding-right-0">
+            <!-- Welcome clock -->
             <div class="day bg-info p-2 mb-2 text-center">
                 <p id="welcome-time">TID</p>
                 <p id="welcome-date" class="text-capitalize">DAGENS DATUM</p>
             </div>
             <div id="todocontainer" class="bg-success p-2">
-                <div class="d-flex flex-column todoitem">
+                <div class="todoitem temp">
                     <div class="d-flex flex-column">
                         <div class="accordion fs-6" id="todoAccordion">
                             <div class="accordion-item bg-success">
@@ -50,27 +51,27 @@
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                     data-bs-parent="#todoAccordion">
                                     <div class="accordion-body bg-secondary d-flex flex-column">
-                                        <div>
+                                        <div class="todoInfo">
                                             <p>Todo-Info</p>
                                         </div>
                                         <div class="d-flex flex-row justify-content-between">
                                             <div>
-                                                <p>StartDatum</p>
+                                                <p class="todoStartDate">StartDatum</p>
                                             </div>
                                             <div>
-                                                <p>SlutDatum</p>
+                                                <p class="todoEndDate">SlutDatum</p>
                                             </div>
                                         </div>
                                         <div class="btn-group btn-group-sm todobuttons" role="group"
                                             aria-label="TODO Options">
-                                            <button type="button" class="btn btn-outline-light btn-sm"
+                                            <button type="button" class="btn btn-outline-light btn-sm todoDone"
                                                 data-bs-toggle="button" autocomplete="off">
                                                 <i class="fas fa-check" style="font-size: 16px"></i>
                                             </button>
-                                            <button type="button" class="btn btn-outline-light btn-sm">
+                                            <button type="button" class="btn btn-outline-light btn-sm todoEdit">
                                                 <i class="fas fa-edit" style="font-size: 16px"></i>
                                             </button>
-                                            <button type="button" class="btn btn-outline-light btn-sm">
+                                            <button type="button" class="btn btn-outline-light btn-sm todoDelete">
                                                 <i class="fas fa-trash-alt" style="font-size: 16px"></i>
                                             </button>
                                         </div>
