--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="./wwwroot/css/base.css" />
 
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"></script>
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
 
     <script src="https://kit.fontawesome.com/80fd7dc215.js" crossorigin="anonymous"></script>
 
@@ -26,10 +26,10 @@
 </head>
 
 <body>
-    <header class="p-1 bg-primary text-center fs-1">
+    <header class="p-1 bg-primary text-center fs-1 margin-right-0">
         <span class="text-white"> TODO-Kalender </span>
     </header>
-    <div class="row bg-secondary text-white margin-right-0">
+    <div class="row bg-secondary text-white margin-right-0 flex-fill">
         <div class="col-12 col-sm-3 col-md-2 padding-right-0">
             <!-- Welcome clock -->
             <div class="day bg-info p-2 mb-2 text-center">
@@ -128,7 +128,7 @@
                 </div>
             </div>
         </div>
-        <div class="d-none d-sm-block col-sm-9 col-md-10 bg-success padding-right-0">
+        <div class="d-none d-sm-flex flex-column col-sm-9 col-md-10 bg-success padding-right-0 flex-fill">
             <div class="row margin-right-0">
                 <div class="col-12 padding-0">
                     <div class="
@@ -165,8 +165,8 @@
                 <p class="col">Lördag</p>
                 <p class="col">Söndag</p>
             </div>
-            <div id="calendar-Days" class="row justify-content-center row-cols-7 margin-right-0">
-                <div class="daycontaner col temp">
+            <div id="calendar-Days" class="row justify-content-center row-cols-7 margin-right-0 flex-fill">
+                <div class="daycontaner temp">
                     <div class="row">
                         <div class="col">
                             <div class="day-Nr">1</div>
