sparar uppdaterad todo

--- a/index.html
+++ b/index.html
@@ -93,9 +93,12 @@
                         <div class="modal-body">
                             <form id="editTodoForm">
                                 <div class="mb-3">
+                                    <label for="todoId" class="form-label">ID</label>
+                                    <input class="form-control" type="text" id="todoId" readonly />
+                                </div>
+                                <div class="mb-3">
                                     <label for="editTodoTitle" class="form-label">Titel</label>
-                                    <input type="text" class="form-control" id="editTodoTitle" required />
-                                    
+                                    <input type="text" class="form-control" id="editTodoTitle" required />                                    
                                 </div>
                                 <div class="mb-3">
                                     <label for="editTodoInfo" class="form-label">Information</label>
@@ -103,8 +106,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="editStartDate" class="form-label">Startdatum</label>
-                                    <input type="date" class="form-control" id="editStartDate" required />
-                                    
+                                    <input type="date" class="form-control" id="editStartDate" required />                                    
                                 </div>
                                 <div class="mb-3">
                                     <label for="editStopDate" class="form-label">Slutdatum</label>
