--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
 </head>
 
 <body>
-    <header class="p-1 bg-primary text-center fs-1 margin-right-0">
+    <header class="p-1 bg-primary text-center fs-1 margin-right-0 border-bottom border-dark border-2">
         <span class="text-white"> TODO-Kalender </span>
     </header>
     <div class="row bg-secondary text-white margin-right-0 flex-fill">
         <div class="col-12 col-sm-3 col-md-2 padding-right-0">
             <!-- Welcome clock -->
-            <div class="day bg-info p-2 mb-2 text-center">
-                <p id="welcome-time">TID</p>
+            <div class="day bg-info p-2 mb-2 text-center text-dark">
+                <p class="fs-2" id="welcome-time">TID</p>
                 <p id="welcome-date" class="text-capitalize">DAGENS DATUM</p>
             </div>
-            <div id="todocontainer" class="bg-success p-2">
+            <div id="todocontainer" class="bg-secondary p-2">
                 <div class="todoitem temp">
                     <div class="d-flex flex-column">
                         <div class="accordion fs-6" id="todoAccordion">
-                            <div class="accordion-item bg-success">
+                            <div class="accordion-item bg-secondary">
                                 <h2 class="accordion-header" id="headingOne">
-                                    <button class="accordion-button bg-success col" type="button"
+                                    <button class="accordion-button bg-info col" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false"
                                         aria-controls="collapseOne">
                                         <p>TODO-Titel</p>
@@ -50,16 +50,16 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                     data-bs-parent="#todoAccordion">
-                                    <div class="accordion-body bg-secondary d-flex flex-column">
-                                        <div class="todoInfo">
+                                    <div class="accordion-body bg-secondary d-flex flex-column border border-dark border-2 rounded">
+                                        <div class="todoInfo border border-white border-1 rounded">
                                             <p>Todo-Info</p>
                                         </div>
                                         <div class="d-flex flex-row justify-content-between">
                                             <div>
-                                                <p class="todoStartDate">StartDatum</p>
+                                                <p class="todoStartDate border border-white border-1 rounded">StartDatum</p>
                                             </div>
                                             <div>
-                                                <p class="todoEndDate">SlutDatum</p>
+                                                <p class="todoEndDate border border-white border-1 rounded">SlutDatum</p>
                                             </div>
                                         </div>
                                         <div class="btn-group btn-group-sm todobuttons" role="group"
@@ -174,31 +174,35 @@
             <div class="row margin-right-0">
                 <div class="col-12 padding-0">
                     <div class="
-                d-flex
-                justify-content-between
-                align-items-center
-                bg-primary
-                fs-5
-                p-2
-                text-white
-              ">
-                        <button id="month-back" data-month-move="-1" class="btn btn-primary">
+                        d-flex
+                        justify-content-between
+                        align-items-center
+                        bg-secondary
+                        border-bottom
+                        border-dark
+                        border-2
+                        fs-3
+                        p-2
+                        text-white
+                        ">
+                        <button id="month-back" data-month-move="-1" class="btn btn-secondary">
                             <i class="fas fa-angle-left fs-3"></i>
                         </button>
                         <span id="current-month" class="text-capitalize">MÅNAD - ÅR</span>
-                        <button id="month-forward" data-month-move="1" class="btn btn-primary">
+                        <button id="month-forward" data-month-move="1" class="btn btn-secondary">
                             <i class="fas fa-angle-right fs-3"></i>
                         </button>
                     </div>
                 </div>
             </div>
             <div class="
-            row
-            justify-content-center
-            row-cols-7
-            margin-right-0
-            text-center
-          ">
+                row
+                justify-content-center
+                row-cols-7
+                margin-right-0
+                text-center
+                bg-secondary
+                ">
                 <p class="col">Måndag</p>
                 <p class="col">Tisdag</p>
                 <p class="col">Onsdag</p>
