satt titlar i  todo dropdown

--- a/index.html
+++ b/index.html
@@ -51,15 +51,28 @@
                                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                     data-bs-parent="#todoAccordion">
                                     <div class="accordion-body bg-secondary d-flex flex-column border border-dark border-2 rounded">
-                                        <div class="todoInfo border border-white border-1 rounded">
-                                            <p>Todo-Info</p>
+                                        <div>
+                                            <div><p>Info</p></div>
+                                            <div class="todoInfo border border-white border-1 rounded">
+                                                <p>Todo-Info</p>
+                                            </div>
                                         </div>
                                         <div class="d-flex flex-row justify-content-between">
                                             <div>
-                                                <p class="todoStartDate border border-white border-1 rounded">StartDatum</p>
+                                                <div>
+                                                    <p>Startar</p>
+                                                </div>                                             
+                                                <div>
+                                                    <p class="todoStartDate border border-white border-1 rounded">StartDatum</p>
+                                                </div>
                                             </div>
                                             <div>
-                                                <p class="todoEndDate border border-white border-1 rounded">SlutDatum</p>
+                                                <div>
+                                                    <p>Slutar</p>
+                                                </div>
+                                                <div>
+                                                    <p class="todoEndDate border border-white border-1 rounded">SlutDatum</p>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="btn-group btn-group-sm todobuttons" role="group"
