startat validering för startdatum

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                                     data-bs-parent="#todoAccordion">
                                     <div class="accordion-body bg-secondary d-flex flex-column border border-dark border-2 rounded">
                                         <div>
-                                            <div><p>Info</p></div>
+                                            <div class="h-auto">
+                                                <p>Info</p>
+                                            </div>
                                             <div class="todoInfo border border-white border-1 rounded">
                                                 <p>Todo-Info</p>
                                             </div>
