- Made it possible to toggle isDone from todocontainer.

--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
                                         </div>
                                         <div class="btn-group btn-group-sm todobuttons" role="group"
                                             aria-label="TODO Options">
-                                            <button type="button" class="btn btn-outline-light btn-sm todoDone"
-                                                data-bs-toggle="button" autocomplete="off">
-                                                <i class="fas fa-check" style="font-size: 16px"></i>
-                                            </button>
+                                            <label type="button" class="btn btn-outline-light btn-sm">
+                                                <input type="checkbox" class="todoDone">
+                                            </label>
                                             <button type="button" class="btn btn-outline-light btn-sm todoEdit" data-bs-toggle="modal" data-bs-target="#editTodo">
                                                 <i class="fas fa-edit" style="font-size: 16px"></i>
                                             </button>
