- Toggle todo in the edit dialog.

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
                                     <label for="editStopDate" class="form-label">Slutdatum</label>
                                     <input type="date" class="form-control" id="editStopDate" />
                                 </div>
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="toggleIsDone" />
+                                    <label class="form-check-label" for="toggleIsDone">Is done</label>
+                                </div>
+
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal" onclick="reloadContent()">
                                         Close
